; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_bio_enc_test.c_setup_tests.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_bio_enc_test.c_setup_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_bio_enc_aes_128_cbc = common dso_local global i32 0, align 4
@test_bio_enc_aes_128_ctr = common dso_local global i32 0, align 4
@test_bio_enc_aes_256_cfb = common dso_local global i32 0, align 4
@test_bio_enc_aes_256_ofb = common dso_local global i32 0, align 4
@test_bio_enc_chacha20 = common dso_local global i32 0, align 4
@test_bio_enc_chacha20_poly1305 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_tests() #0 {
  %1 = load i32, i32* @test_bio_enc_aes_128_cbc, align 4
  %2 = call i32 @ADD_ALL_TESTS(i32 %1, i32 2)
  %3 = load i32, i32* @test_bio_enc_aes_128_ctr, align 4
  %4 = call i32 @ADD_ALL_TESTS(i32 %3, i32 2)
  %5 = load i32, i32* @test_bio_enc_aes_256_cfb, align 4
  %6 = call i32 @ADD_ALL_TESTS(i32 %5, i32 2)
  %7 = load i32, i32* @test_bio_enc_aes_256_ofb, align 4
  %8 = call i32 @ADD_ALL_TESTS(i32 %7, i32 2)
  %9 = load i32, i32* @test_bio_enc_chacha20, align 4
  %10 = call i32 @ADD_ALL_TESTS(i32 %9, i32 2)
  %11 = load i32, i32* @test_bio_enc_chacha20_poly1305, align 4
  %12 = call i32 @ADD_ALL_TESTS(i32 %11, i32 2)
  ret i32 1
}

declare dso_local i32 @ADD_ALL_TESTS(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
